src/test/ui/nll/closure-malformed-projection-input-issue-102800.stderr
error: lifetime may not live long enough
  --> $DIR/closure-malformed-projection-input-issue-102800.rs:18:48
   |
LL |     let _: for<'a> fn(<&'a () as Trait>::Ty) = |_| {};
   |                                                ^-^
   |                                                ||
   |                                                |has type `<&'1 () as Trait>::Ty`
   |                                                requires that `'1` must outlive `'static`

error: higher-ranked subtype error
  --> $DIR/closure-malformed-projection-input-issue-102800.rs:18:48
   |
LL |     let _: for<'a> fn(<&'a () as Trait>::Ty) = |_| {};
   |                                                ^^^

error: higher-ranked subtype error
  --> $DIR/closure-malformed-projection-input-issue-102800.rs:18:48
   |
LL |     let _: for<'a> fn(<&'a () as Trait>::Ty) = |_| {};
   |                                                ^^^

error: implementation of `Trait` is not general enough
  --> $DIR/closure-malformed-projection-input-issue-102800.rs:18:48
   |
LL |     let _: for<'a> fn(<&'a () as Trait>::Ty) = |_| {};
   |                                                ^^^^^^ implementation of `Trait` is not general enough
   |
   = note: `&'0 ()` must implement `Trait`, for any lifetime `'0`...
   = note: ...but `Trait` is actually implemented for the type `&'static ()`

error: implementation of `Trait` is not general enough
  --> $DIR/closure-malformed-projection-input-issue-102800.rs:18:12
   |
LL |     let _: for<'a> fn(<&'a () as Trait>::Ty) = |_| {};
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ implementation of `Trait` is not general enough
   |
   = note: `&'0 ()` must implement `Trait`, for any lifetime `'0`...
   = note: ...but `Trait` is actually implemented for the type `&'static ()`

error: implementation of `Trait` is not general enough
  --> $DIR/closure-malformed-projection-input-issue-102800.rs:18:12
   |
LL |     let _: for<'a> fn(<&'a () as Trait>::Ty) = |_| {};
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ implementation of `Trait` is not general enough
   |
   = note: `&'0 ()` must implement `Trait`, for any lifetime `'0`...
   = note: ...but `Trait` is actually implemented for the type `&'static ()`

error: implementation of `Trait` is not general enough
  --> $DIR/closure-malformed-projection-input-issue-102800.rs:18:12
   |
LL |     let _: for<'a> fn(<&'a () as Trait>::Ty) = |_| {};
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ implementation of `Trait` is not general enough
   |
   = note: `&'0 ()` must implement `Trait`, for any lifetime `'0`...
   = note: ...but `Trait` is actually implemented for the type `&'static ()`

error: implementation of `Trait` is not general enough
  --> $DIR/closure-malformed-projection-input-issue-102800.rs:18:12
   |
LL |     let _: for<'a> fn(<&'a () as Trait>::Ty) = |_| {};
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ implementation of `Trait` is not general enough
   |
   = note: `&'0 ()` must implement `Trait`, for any lifetime `'0`...
   = note: ...but `Trait` is actually implemented for the type `&'static ()`

error: implementation of `Trait` is not general enough
  --> $DIR/closure-malformed-projection-input-issue-102800.rs:18:48
   |
LL |     let _: for<'a> fn(<&'a () as Trait>::Ty) = |_| {};
   |                                                ^^^^^^ implementation of `Trait` is not general enough
   |
   = note: `&'0 ()` must implement `Trait`, for any lifetime `'0`...
   = note: ...but `Trait` is actually implemented for the type `&'static ()`

error: implementation of `Trait` is not general enough
  --> $DIR/closure-malformed-projection-input-issue-102800.rs:18:48
   |
LL |     let _: for<'a> fn(<&'a () as Trait>::Ty) = |_| {};
   |                                                ^^^^^^ implementation of `Trait` is not general enough
   |
   = note: `&'0 ()` must implement `Trait`, for any lifetime `'0`...
   = note: ...but `Trait` is actually implemented for the type `&'static ()`

error: implementation of `Trait` is not general enough
  --> $DIR/closure-malformed-projection-input-issue-102800.rs:18:48
   |
LL |     let _: for<'a> fn(<&'a () as Trait>::Ty) = |_| {};
   |                                                ^^^^^^ implementation of `Trait` is not general enough
   |
   = note: `&'0 ()` must implement `Trait`, for any lifetime `'0`...
   = note: ...but `Trait` is actually implemented for the type `&'static ()`

error: implementation of `Trait` is not general enough
  --> $DIR/closure-malformed-projection-input-issue-102800.rs:18:48
   |
LL |     let _: for<'a> fn(<&'a () as Trait>::Ty) = |_| {};
   |                                                ^^^^^^ implementation of `Trait` is not general enough
   |
   = note: `&'0 ()` must implement `Trait`, for any lifetime `'0`...
   = note: ...but `Trait` is actually implemented for the type `&'static ()`

error: aborting due to 12 previous errors

